--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed": "node seedDatabase.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
+    "esm": "^3.2.25",
+    "idb": "^7.1.1",
     "pinia": "^2.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.53.1",
+    "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
