--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "seed": "node seedDatabase.mjs"
+    "seed": "node seedDatabase.mjs",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
@@ -28,13 +34,21 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/vue": "^8.1.0",
+    "@types/cypress": "^1.1.3",
     "@types/node": "^22.15.3",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "cypress": "^13.17.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
+    "vitest": "^3.1.2",
     "vue-tsc": "^1.8.27"
   }
 }
