--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["src/tests/**"],
   "references": [{ "path": "./tsconfig.node.json" }]
-} 
+}
